[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = ["mDanone <daniyalbek.daniyalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
psycopg2 = "^2.9.6"
uvicorn = "^0.21.1"
mypy = "^1.2.0"
aiopg = "^1.4.0"
sqlalchemy = "1.4.38"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy-stubs = "^0.4"
alembic = "^1.10.3"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
